--- a/docs/src/main/asciidoc/security-enabling-basic-auth-howto.adoc
+++ b/docs/src/main/asciidoc/security-enabling-basic-auth-howto.adoc
@@ -1,20 +1,20 @@
 [id="security-enabling-basic-auth-howto"]
-= Enable HTTP basic authentication
+= Enable HTTP Basic authentication
 
-Enable the HTTP basic authentication for your Quarkus project and allow users to authenticate with a username and password.
+Enable the HTTP Basic authentication for your Quarkus project and allow users to authenticate with a username and password.
  
 == Prerequisites
  
 * You have installed at least one extension that provides an `IdentityProvider` based on username and password, such as xref:security-jdbc.adoc[Elytron JDBC].
  
-. Enable basic authentication by setting the value of `quarkus.http.auth.basic` property to `true`.
+. Enable Basic authentication by setting the value of `quarkus.http.auth.basic` property to `true`.
 +
 [source,properties]
 ----
 quarkus.http.auth.basic=true
 ----
  
-For a Basic Authentication configuration walk-through that uses `JPA`, see the xref:security-getting-started.adoc[Getting Started With Security] guide.
+For a Basic authentication configuration walk-through that uses `JPA`, see the xref:security-getting-started.adoc[Getting Started With Security] guide.
  
 == Additional resources
  
